--- a/catalog.html
+++ b/catalog.html
@@ -22,23 +22,22 @@
            </label>
           </form>
           <span class="header-bookmarks"><a href="bookmarks.html">Закладки: 0</a></span>
-          <span class="header-cart"><a href="cart.html">Корзина: 10</a></span>
+          <span class="header-cart goods-in-cart"><a href="cart.html">Корзина: 10</a></span>
           <span class="header-order"><a href="order.html">Оформить заказ</a></span>
         </div>
       </section>
       <section class="header-middle container">
         <h1>Интернет-магазин строительных материалов и инструментов для ремонта</h1>
         <p class="header-contacts">
-          <span>+7(812)555-05-55</span><br>
+          <span>+7 (812) 555-05-55</span><br>
           г.Санкт-Петербург, ул. Б. Конюшенная, д.19/8
         </p>
         <ul class="user-navigation">
-          <li class="user-name"><a href="#">Равшан Джамшудович</a></li>  <!--Идея в ссылке на профиль пользователя-->
-          <li class="sing-out">
-            <a href="#" aria-label="Выйти">
+          <li class="user-name"><a href="#">Равшан Джамшудович</a>
+            <a class="sing-out" href="#" aria-label="Выйти">
               <img src="img/icon-logout.svg" width="20px" height="17px" alt="">
             </a>
-          </li>
+          </li>  
           <li class="my-order"><a href="#">Мои заказы</a></li>
           <li class="personal-account"><a href="#">Личный кабинет</a></li>
         </ul>
@@ -301,9 +300,9 @@
           Все права защищены
           </p>
           <ul class="social">
-            <li><a class="social" href="#"><img src="img/vk-icon.svg" width="26px" height="15px" alt="Вконтакте"></a></li>
-            <li><a class="social" href="#"><img src="img/facebook-icon.svg" width="12px" height="22px" alt="Фэйсбук"></a></li>
-            <li><a class="social" href="#"><img src="img/instagram-icon.svg" width="21px" height="21px" alt="Инстаграм"></a></li>
+            <li><a class="social-item" href="#"><img src="img/vk-icon.svg" width="26px" height="15px" alt="Вконтакте"></a></li>
+            <li><a class="social-item" href="#"><img src="img/facebook-icon.svg" width="12px" height="22px" alt="Фэйсбук"></a></li>
+            <li><a class="social-item" href="#"><img src="img/instagram-icon.svg" width="21px" height="21px" alt="Инстаграм"></a></li>
           </ul>
           <p class="footer-feedback">
           Обратная связь:<br> 
