--- a/catalog.html
+++ b/catalog.html
@@ -73,10 +73,10 @@
               <!--Будет сортировка по цене-->
             </fieldset>
             <fieldset>
-              <legend>Производители</legend>
+              <legend>Производители:</legend>
               <ul class="filters-list">
                 <li class="filter-option">
-                  <input class="visually-hidden filter-input" type="checkbox" name="Bosch" id="filter-bosh" checked>
+                  <input class="visually-hidden filter-input filter-input-checkbox" type="checkbox" name="Bosch" id="filter-bosh" checked>
                   <label for="filter-bosh">Bosch</label>
                </li>
                <li class="filter-option">
@@ -100,7 +100,7 @@
             <fieldset>
               <legend>Питание:</legend>
               <ul class="filters-list-power">
-                <li class="filter-option">
+                <li class="filter-electrical">
                   <input class="visually-hidden filter-input-radio" type="radio" name="product-group" value="accumulator" id="filter-accumulator" checked>
                   <label for="filter-accumulator">Аккумуляторные</label>               
                 </li>
@@ -122,8 +122,8 @@
               <li><a class="sort-price" href="#">По функционалу</a></li>
             </ul>  
             <ul class="sort-sequence">
-              <li><a class="sort-min-max" href="#" aria-label="Сортировать товары по возрастанию">будет стрелка вверх</a></li>
-              <li><a class="sort-min-max" href="#" aria-label="Сортировать товары по убыванию">будет стрелка вниз</a></li>
+              <li><a class="sort-min-max" href="#" aria-label="Сортировать товары по возрастанию"><img src="img/icon-up-dir.svg" width="11px" height="10px" alt=""></a></li>
+              <li><a class="sort-min-max" href="#" aria-label="Сортировать товары по убыванию"><img src="img/icon-down-dir.svg" width="11px" height="10px" alt=""></a></li>
             </ul>  
           </section> 
           <section class="catalog">
