--- a/index.html
+++ b/index.html
@@ -94,60 +94,77 @@
         </div>
         <ul class="catalog-list-popular">
           <li class="catalog-item">
-            <p class="catalog-item-image">
+            <div class="catalog-item-image">
               <img src="img/product-10.jpg" width="218" height="170" alt="Перфоратор Bosh BFG 9000">
-            </p>
-            <a href="catalog-item10.html">
-              <strong class="catalog-item-name">Перфоратор Bosh BFG 9000</strong>
-            </a>
+            </div>
+            <div class="catalog-item-tittle">
+              <a href="catalog-item10.html">
+                <strong class="catalog-item-name">Перфоратор Bosh BFG 9000</strong>
+              </a>
+            </div>
             <p class="catalog-item-price">
-              <span class="old-price">32 500₽</span>
-              <a class="button-buy" href="#">25 500₽</a>
+              <div class="old-price"><span>32 500₽</span></div>
+              <div class="button-buy"><a href="#">25 500₽</a></div>
+            </p>
+            <div class="actions">
               <a class="buy-now" href="#">Купить</a>
               <a class="bookmark" href="bookmarks.html">В закладки</a>
-            </p>
+            </div>
           </li>
-          <li class="catalog-item">
-            <p class="catalog-item-image">
+           <li class="catalog-item">
+            <div class="catalog-item-image">
               <img src="img/product-1.jpg" width="218" height="170" alt="Перфоратор Bosh BFG 3000">
-            </p>
-            <a href="catalog-item1.html">
-              <strong class="catalog-item-name">Перфоратор Bosh BFG 3000</strong>
-            </a>
+            </div>
+            <div class="catalog-item-tittle">
+              <a href="catalog-item1.html">
+                <strong class="catalog-item-name">Перфоратор Bosh BFG 3000</strong>
+              </a>
+            </div>
             <p class="catalog-item-price">
-              <span class="old-price">22 500₽</span>
-              <a class="button-buy" href="#">15 500₽</a>
+              <div class="old-price"><span>22 500₽</span></div>
+              <div class="button-buy"><a href="#">15 500₽</a></div>
+            </p>
+            <div class="actions">
               <a class="buy-now" href="#">Купить</a>
               <a class="bookmark" href="bookmarks.html">В закладки</a>
-            </p>
+            </div>
           </li>
           <li class="catalog-item">
-            <p class="catalog-item-image">
-              <img src="img/product-2.jpg" width="218" height="170" alt="Перфоратор Bosh BFG 6000">
-            </p>
-            <a href="catalog-item2.html">
-              <strong class="catalog-item-name">Перфоратор Bosh BFG 6000</strong>
-            </a>
+            <div class="catalog-item-image">
+              <img src="img/product-2.jpg" width="218" height="170" alt="Перфоратор Bosh BFG 9000">
+            </div>
+            <div class="catalog-item-tittle">
+              <a href="catalog-item2.html">
+                <strong class="catalog-item-name">Перфоратор Bosh BFG 6000</strong>
+              </a>
+            </div>
             <p class="catalog-item-price">
-              <span class="old-price">30 500₽</span>
-              <a class="button-buy" href="#">25 500₽</a>
+              <div class="old-price"><span>30 500₽</span></div>
+              <div class="button-buy"><a href="#">25 500₽</a></div>
+            </p>
+            <div class="actions">
               <a class="buy-now" href="#">Купить</a>
               <a class="bookmark" href="bookmarks.html">В закладки</a>
-            </p>
-          </li>
-          <li class="catalog-item catalog-item-new">
-            <p class="catalog-item-image">
-              <img src="img/product-3.jpg" width="218" height="170" alt="Перфоратор Bosh BFG 2000">
-            </p>
-            <a href="catalog-item3.html">
-              <strong class="catalog-item-name">Перфоратор Bosh BFG 2000</strong>
-            </a>
+            </div>
+          </li>  
+          <li class="catalog-item">
+            <div class="flag flag-new">новинка</div>
+            <div class="catalog-item-image">
+              <img src="img/product-3.jpg" width="218" height="170" alt="Перфоратор Bosh BFG 9000">
+            </div>
+            <div class="catalog-item-tittle">
+              <a href="catalog-item3.html">
+                <strong class="catalog-item-name">Перфоратор Bosh BFG 2000</strong>
+              </a>
+            </div>
             <p class="catalog-item-price">
-              <span class="old-price"></span>
-              <a class="button-buy" href="#">12 500₽</a>
+              <div class="old-price"><span></span></div>
+              <div class="button-buy"><a href="#">12 500₽</a></div>
+            </p>
+            <div class="actions">
               <a class="buy-now" href="#">Купить</a>
               <a class="bookmark" href="bookmarks.html">В закладки</a>
-            </p>
+            </div>
           </li>
         </ul>
       </section>
