--- a/index.html
+++ b/index.html
@@ -297,15 +297,18 @@
       <section class="modal modal-write-us">
         <form class="write-us" action="https://echo.htmlacademy.ru" method="post">
           <fieldset>
-            <label>Ваше имя:
-              <input class="user-name" type="text" name="user-name" placeholder="Имя Фамилия">
-            </label>
-            <label>Ваш e-mail:
-              <input class="user-emale" type="e-mail" name="user-emale" placeholder="email@example.com">
-            </label>
-            <label>Текст письма:
-              <input class="user-question" type=text" name="user-question" placeholder="В свободной форме">
-            </label>
+            <div class="modal-wrapper">
+              <label for="modal-user-name">Ваше имя:</label>
+              <input class="modal-user-name" id="modal-user-name" type="text" name="user-name" placeholder="Имя Фамилия">
+            </div>
+            <div class="modal-wrapper">
+              <label for="user-emale">Ваш e-mail:</label>
+              <input class="user-emale" id="user-emale" type="e-mail" name="user-emale" placeholder="email@example.com"> 
+            </div>
+            <div class="modal-wrapper">
+              <label for="user-question">Текст письма:</label>
+              <input class="user-question" id="user-question" type=text" name="user-question" placeholder="В свободной форме">
+            </div>
             <button class="button button-submit" type="submit">Отправить</button>
             <button class="button button-close" type="button" aria-label="Закрыть окно"></button>
           </fieldset>
