декоративные элементы и состояния индекса

--- a/index.html
+++ b/index.html
@@ -93,8 +93,6 @@
           <a href="#" class="all-popular-product">Все популярные товары</a>
         </div>
         <ul class="catalog-list-popular">
-
-
           <li class="catalog-item">
             <div class="catalog-item-image">
               <img src="img/product-10.jpg" width="218px" height="170px" alt="Перфоратор Bosh BFG 9000">
@@ -109,23 +107,14 @@
               <a class="bookmark" href="bookmarks.html">В закладки</a>
             </div>
           </li>
-
-
-
-
-
-           <li class="catalog-item">
+          <li class="catalog-item">
             <div class="catalog-item-image">
               <img src="img/product-1.jpg" width="218px" height="170px" alt="Перфоратор Bosh BFG 3000">
             </div>
-            <div class="catalog-item-tittle">
-              <a href="catalog-item1.html">
-                <strong class="catalog-item-name">Перфоратор Bosh BFG 3000</strong>
-              </a>
-            </div>
+            <a href="catalog-item1.html" class="catalog-item-title">Перфоратор Bosh BFG 3000</a>
             <p class="catalog-item-price">
-              <div class="old-price"><span>22 500₽</span></div>
-              <div class="button-buy"><a href="#">15 500₽</a></div>
+              <span class="old-price">22 500₽</span>
+              <a href="#" class="button-buy">15 500₽</a>
             </p>
             <div class="actions">
               <a class="buy-now" href="#">Купить</a>
@@ -134,36 +123,26 @@
           </li>
           <li class="catalog-item">
             <div class="catalog-item-image">
-              <img src="img/product-2.jpg" width="218px" height="170px" alt="Перфоратор Bosh BFG 9000">
+              <img src="img/product-2.jpg" width="218px" height="170px" alt="Перфоратор Bosh BFG 6000">
             </div>
-            <div class="catalog-item-tittle">
-              <a href="catalog-item2.html">
-                <strong class="catalog-item-name">Перфоратор Bosh BFG 6000</strong>
-              </a>
-            </div>
+            <a href="catalog-item2.html" class="catalog-item-title">Перфоратор Bosh BFG 6000</a>
             <p class="catalog-item-price">
-              <div class="old-price"><span>30 500₽</span></div>
-              <div class="button-buy"><a href="#">25 500₽</a></div>
+              <span class="old-price">30 500₽</span>
+              <a href="#" class="button-buy">25 500₽</a>
             </p>
             <div class="actions">
               <a class="buy-now" href="#">Купить</a>
               <a class="bookmark" href="bookmarks.html">В закладки</a>
             </div>
           </li>
-
-
-          <li class="catalog-item catalog-item-new">
+          <li class="catalog-item catalog-new-item">
             <div class="catalog-item-image">
-              <img src="img/product-3.jpg" width="218px" height="170px" alt="Перфоратор Bosh BFG 9000">
+              <img src="img/product-3.jpg" width="218px" height="170px" alt="Перфоратор Bosh BFG 2000">
             </div>
-            <div class="catalog-item-tittle">
-              <a href="catalog-item3.html">
-                <strong class="catalog-item-name">Перфоратор Bosh BFG 2000</strong>
-              </a>
-            </div>
+            <a href="catalog-item3.html" class="catalog-item-title">Перфоратор Bosh BFG 2000</a>
             <p class="catalog-item-price">
-              <div class="old-price"><span></span></div>
-              <div class="button-buy"><a href="#">12 500₽</a></div>
+              <span class="old-price"></span>
+              <a href="#" class="button-buy">12 500₽</a>
             </p>
             <div class="actions">
               <a class="buy-now" href="#">Купить</a>
@@ -172,8 +151,6 @@
           </li>
         </ul>
       </section>
-      <!-- Окончание секции к бонусному заданию "популярные товары"-->
-      <!-- Популярные производители инструмента -->
       <section class="popular-maker container">
         <div class="popular-maker-tittle">
           <h2>Популярные производители:</h2>
@@ -216,7 +193,7 @@
           </div>
           <div class="service-content">
             <ul class="service-list">
-              <li><button class="button service-list-button" type="button">Доставка</button></li>
+              <li><button class="button service-list-button button-active" type="button">Доставка</button></li>
               <li><button class="button service-list-button" type="button">Гарантия</button></li>
               <li><button class="button service-list-button" type="button">Кредит</button></li>
             </ul>
